# FOYLIGHT

./: CMakeLists.txt  LICENSE  README.md
cmake/: BuildQtAndroidCMake.cmake
platform/: PostBuildPlatform.cmake  PreBuildPlatform.cmake
platform/android/: AndroidManifest.xml.in
platform/windows/: icon.aps
qml/: FOYLIGHT.qrc  FOYLUMIERE.qrc  Main.qml
qml/Icons/: Manager.qml  qmldir
qml/Pads/: Manager.qml  qmldir
qml/Utils/: AndroidPage.qml  ColorPage.qml  ColorPicker.qml  DunePane.qml  EffectPane.qml  Fader.qml  General.qml  Main.qml  PadButton.qml  ParLedPane.qml  TradPane.qml  WindowsPage.qml  qmldir
src/: Dune.cpp  Dune.hpp  Effects.cpp  Effects.hpp  FOYLIGHT.cpp  FOYLIGHT.hpp  FOYLUMIERE.cpp  FOYLUMIERE.hpp  Fixture.cpp  Fixture.hpp  Main.cpp  ParLed.cpp  ParLed.hpp  Sacn.cpp  Sacn.hpp  trad.cpp  trad.hpp
